# selenai

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  envtest  launch_post.md  selenai.toml
.github/workflows/: ci.yml
docs/: advanced_tool_use_plan.md  config.md  lua_tool_plan.md  mvp_plan.md  recipes.md  roadmap.md
src/: app.rs  config.rs  macros.rs  main.rs  session.rs  types.rs
src/llm/: mod.rs  openai.rs
src/lua_tool/: mod.rs  prelude.lua
src/tui/: components.rs  market.rs  mod.rs
