[package]
name = "selenai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
crossterm = "0.27.0"
mlua = { version = "0.9.6", features = ["lua54", "vendored"] }
ratatui = "0.26.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "time"] }
unicode-width = "0.1.13"
async-trait = "0.1.81"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
toml = "0.8.14"
futures-util = "0.3"
dotenvy = "0.15"
patch = "0.7.0"
regex = "1.12.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
taffy = "0.9.2"

[dev-dependencies]
tempfile = "3.10"
